--- a/src/scss/modules/_HUD.scss
+++ b/src/scss/modules/_HUD.scss
@@ -6,63 +6,35 @@
 	width: 100vw;
 	height: 100%;
 	color: $black;
-	
-	.hud__title {
+	pointer-events: none;
+
+	.hud__left {
 		position: absolute;
-		opacity: 0.5;
-		right: 0;
-		display: inline-block;
-		padding: $space;
-		text-align: right;
-	}
-	
-	.hud__time {
-		display: inline-block;
-	}
-	
-	.hud__prompt {
-		position: absolute;
-		left: 50%;
-		top: 50%;
-		-webkit-transform: translate(-50%, -50%);
-		transform: translate(-50%, -50%);
+		width: 22.5%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
 		opacity: 0;
-		transition: 0.5s;
-		color: white;
-		
+		transition: $speed;
+
 		&.active {
 			opacity: 1;
 		}
 	}
-	
-	.hud__pause {
+
+	.hud__right {
 		position: absolute;
-		width: 100%;
-		height: 75vh;
-		background: $translucent;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		left: 50%;
-		top: 50%;
-		-webkit-transform: translate(-50%, -50%);
-		transform: translate(-50%, -50%);
-		opacity: 0;
-		transition: 0.5s;
-		
-		.hud__pause__inner {
-			cursor: pointer;	
-		}
-		
-		&.active {
-			opacity: 1;	
-		}
-	}
-	
-	.hud__credits {
-		position: absolute;
-		bottom: 0;
+		width: 22.5%;
+		height: 100%;
+		top: 0;
 		right: 0;
-		padding: $space;
+		background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+		opacity: 0;
+		transition: $speed;
+
+		&.active {
+			opacity: 1;
+		}
 	}
 }
