--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,6 @@
 
 // modules
 @import "modules/global";
-@import "modules/gallery";
 @import "modules/canvas";
+@import "modules/overlay";
 @import "modules/HUD";
