--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,5 +5,6 @@
 // modules
 @import "modules/global";
 @import "modules/canvas";
-@import "modules/overlay";
+@import "modules/loading";
 @import "modules/HUD";
+@import "modules/menu";
