--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -10,6 +10,14 @@
 	font-size: $fontSizeMedium;
 }
 
+.text-small {
+	font-size: $fontSizeSmall;
+}
+
+.text-em {
+	font-style: italic;
+}
+
 .noselect {
   -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -17,4 +25,8 @@
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
+}
+
+.hidden {
+	opacity: 0;
 }
