--- a/src/scss/modules/_canvas.scss
+++ b/src/scss/modules/_canvas.scss
@@ -1,8 +1,6 @@
 canvas {
 	position: absolute;
+	left: 0;
+	top: 0;
 	z-index: $zCanvas;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
 }
