--- a/src/scss/modules/_global.scss
+++ b/src/scss/modules/_global.scss
@@ -15,3 +15,28 @@ a {
 	text-decoration: none;
 	color: inherit;
 }
+
+$contentPadding: 80px;
+
+.wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+	.content {
+		width: 100%;
+		height: $canvasHeight;
+		position: relative;
+	}
+
+	.content-push {
+		width: 100%;
+		height: $contentPadding;
+	}
+}
