--- a/src/scss/utils/_vars.scss
+++ b/src/scss/utils/_vars.scss
@@ -1,21 +1,24 @@
 // colours
 $white: #fff;
 $black: #000;
+$translucent: rgba(255, 255, 255, 0.75);
 
 // spacing
-$canvasHeight: 540px;
+$canvasHeight: 520px;
 $space: 12px;
 
 // z-index
 $zCanvas: 10;
-$zOverlay: 11;
+$zLoading: 11;
 $zPreLoading: 12;
 $zHUD: 13;
+$zMenu: 14;
+$zNav: 14;
 
 // colours
 $black: #111;
 $white: #fff;
-$translucent: rgba(255,255,255,0.5);
+$translucent: rgba(255,255,255,0.75);
 
 // animation
 $transition: 0.5s;
@@ -23,10 +26,11 @@ $transitionFast: 0.25s;
 $transitionSlow: 0.75s;
 
 // type
-$fontStack: 'Work Sans', sans-serif;
-$fontSize: 16px;
-$fontSizeMedium: 30px;
-$fontSizeLarge: 50px;
+$fontStack: 'Arial', sans-serif;
+$fontSize: 15px;
+$fontSizeSmall: 15px;
+$fontSizeMedium: 22px;
+$fontSizeLarge: 40px;
 
 // borders
 $border: 1px black solid;
