--- a/src/scss/utils/_vars.scss
+++ b/src/scss/utils/_vars.scss
@@ -29,8 +29,9 @@ $transitionSlow: 0.75s;
 $fontStack: 'Arial', sans-serif;
 $fontSize: 15px;
 $fontSizeSmall: 15px;
-$fontSizeMedium: 22px;
+$fontSizeMedium: 20px;
 $fontSizeLarge: 40px;
+$fontSizeHuge: 50px;
 
 // borders
 $border: 1px black solid;
