update mouse control

--- a/src/scss/modules/_HUD.scss
+++ b/src/scss/modules/_HUD.scss
@@ -1,3 +1,4 @@
+/*
 $gradStart: rgba(255,255,255,0.25);
 $gradStop: rgba(255,255,255,0);
 $gradPink: rgba(255, 190, 190, 1);
@@ -91,3 +92,4 @@ $gradPink: rgba(255, 190, 190, 1);
     }
   }
 }
+*/
