--- a/src/scss/modules/_menu.scss
+++ b/src/scss/modules/_menu.scss
@@ -77,7 +77,7 @@
 
   .menu-close {
     padding: $space;
-    padding-right: $space * 2;
+    padding-right: $space;
     position: absolute;
     top: 0;
     right: 0;
