--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,8 @@
 
 // modules
 
-@import "modules/global";
-@import "modules/content";
-@import "modules/loading";
-@import "modules/menu";
+@import 'modules/global';
+@import 'modules/content';
+@import 'modules/loading';
+@import 'modules/menu';
+@import 'modules/label';
