--- a/scss/modules/_menu.scss
+++ b/scss/modules/_menu.scss
@@ -1,112 +1,67 @@
-.nav {
-  @extend .noselect;
-
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  text-align: right;
-  z-index: $zNav;
-
-  .nav__inner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    text-align: right;
-    padding: $space;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    transition: $transition;
-
-    &.hidden {
-      pointer-events: none;
-      opacity: 0;
-      transform: translateX(40px);
-    }
-
-    .nav__title {
-      padding: $space / 2;
-      text-transform: uppercase;
-    }
-
-    .nav__description {
-      padding: $space / 2;
-      width: 400px;
-
-      p {
-        margin: 0;
-      }
-    }
-
-    .nav__links {
-      padding: $space / 2;
-
-      .nav__item {
-        padding-left: $space;
-        display: inline-block;
-        cursor: pointer;
-        text-decoration: underline;
-        text-transform: uppercase;
-      }
-
-      a {
-        text-decoration: underline;
-        text-transform: uppercase;
-      }
-    }
-  }
-
-  &.hidden {
-    opacity: 0;
-  }
-}
-
 .menu {
   @extend .noselect;
-
-  position: absolute;
-  z-index: $zMenu;
-  width: 100%;
-  height: 100%;
+  position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
+  z-index: $zMenu;
   pointer-events: none;
-  transition: $transitionFast;
-
-  .menu-close {
-    padding: $space;
-    padding-right: $space;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: $zMenu + 1;
-    cursor: pointer;
-  }
 
   &.hidden {
     opacity: 0;
     pointer-events: none;
   }
 
-  &.active {
-    pointer-events: all;
+  .menu__inner {
+    .menu-button {
+      cursor: pointer;
+      padding: $space;
+      pointer-events: all;
+
+      &:hover {
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+.menu-about {
+  @extend .noselect;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: $zMenu;
+  background: rgba(6, 6, 6, 0.6);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: $transition;
+
+  &.hidden {
+    opacity: 0;
+    pointer-events: none;
   }
 
-  .menu__inner {
-    width: 100%;
-    height: 100%;
+  .menu-about__inner {
+    width: 50%;
+    height: 50%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background: $translucent;
+    justify-content: flex-end;
 
-    .menu__inner__about {
-      width: 45%;
+    .menu-about__inner__p {
+      width: 50%;
+      text-align: right;
+    }
 
-      a {
-        text-decoration: underline;
+    .close-menu {
+      width: 100%;
+      text-align: right;
+      text-decoration: underline;
+      cursor: pointer;
+
+      &:hover {
+        font-weight: bold;
       }
     }
   }
