--- a/scss/modules/_global.scss
+++ b/scss/modules/_global.scss
@@ -13,6 +13,7 @@ body {
 	line-height: $lineHeight;
 	letter-spacing: $letterSpacing;
 	color: $colourPrimary;
+	background: $colourBackground;
 }
 
 a {
