--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -2,4 +2,6 @@ $space: 8px;
 $colourPrimary: #eee;
 $colourSeconday: #aaa;
 $colourBackground: #080808;
+$transparent: rgba(#000, 0.25);
 $transition: 0.5s;
+$indexNav: 100;
