--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -2,6 +2,9 @@ $space: 8px;
 $colourPrimary: #eee;
 $colourSeconday: #aaa;
 $colourBackground: #080808;
-$transparent: rgba(#000, 0.25);
+$transparent: rgba(#000, 0.5);
 $transition: 0.5s;
+
+// height
 $indexNav: 100;
+$indexMenu: 99;
