style & colour menu interface

--- a/scss/modules/_global.scss
+++ b/scss/modules/_global.scss
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-	font-family: $fontStackAlt;
+	font-family: $fontStack;
 	font-size: $fontSize;
 	line-height: $lineHeight;
 	letter-spacing: $letterSpacing;
