--- a/scss/utils/_type.scss
+++ b/scss/utils/_type.scss
@@ -1,6 +1,6 @@
 $fontStack: 'Karla', sans-serif;
 $fontStackAlt: 'Playfair Display', serif;
-$fontSize: 14px;
-$fontLarge: 28px;
+$fontSize: 16px;
+$fontLarge: 24px;
 $lineHeight: 1.25;
-$letterSpacing: 1.2px;
+$letterSpacing: initial;
