--- a/scss/modules/_canvas.scss
+++ b/scss/modules/_canvas.scss
@@ -1,17 +1,24 @@
-.canvas-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
+.wrapper {
   width: 100vw;
   height: 100vh;
-  cursor: crosshair;
   user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
+  .canvas-wrapper {
+    position: relative;
+    cursor: crosshair;
+
+    canvas {
+      margin: 0;
+      padding: 0;
+
+      &:nth-child(2) {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
   }
 }
