--- a/scss/modules/_index.scss
+++ b/scss/modules/_index.scss
@@ -1,6 +1,2 @@
-@import 'global';
-@import 'canvas';
-@import 'nav';
-@import 'menu';
-@import 'menu-art';
-@import 'menu-controls';
+@import './general/index';
+@import './home/index';
