--- a/scss/utils/_type.scss
+++ b/scss/utils/_type.scss
@@ -1,6 +1,8 @@
 $fontStack: 'Karla', sans-serif;
 $fontStackAlt: 'Playfair Display', serif;
-$fontSize: 16px;
+$fontSmall: 12px;
+$fontSize: 17px;
 $fontLarge: 24px;
+$fontHuge: 40px;
 $lineHeight: 1.25;
 $letterSpacing: initial;
