--- a/scss/modules/general/_canvas.scss
+++ b/scss/modules/general/_canvas.scss
@@ -1,10 +1,23 @@
 .wrapper {
-  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100vh;
   user-select: none;
   display: flex;
   align-items: center;
   justify-content: center;
+  user-select: none;
+  z-index: $indexCanvas;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity $transitionSlow;
+
+  &.active {
+    opacity: 1;
+    pointer-events: all;
+  }
 
   .canvas-wrapper {
     position: relative;
