--- a/scss/modules/home/_page.scss
+++ b/scss/modules/home/_page.scss
@@ -6,11 +6,11 @@
   display: flex;
   justify-content: flex-end;
   z-index: $indexPage;
-  transition: $transitionSlow;
-  transition-timing-function: linear;
+  transform-origin: top left;
+  transition: opacity $transition ease 0.125s, transform $transition ease 0s;
 
   &.hidden {
-    transform: translateX(50vw);
+    opacity: 0;
     pointer-events: none;
   }
 
@@ -28,7 +28,7 @@
 
     .section {
       width: 100%;
-      padding-top: $gridSize;
+      padding-top: $gridSize * 2;
       margin-top: $gridSize * 8;
       border-top: $border;
 
