--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -1,30 +1,32 @@
 // colours
-$colourPrimary: #eee; //eee
-$colourSecondary: #888;
-$colourBackground: #4b474a;//#444;
+$colourPrimary: #eee;
+$colourSecondary: #444;
+$colourBackground: #4c474b;
 $colourBackgroundAlt: lighten($colourBackground, 5%);
-$colourAlt: #b888fa;//#9446ff;
+$colourAlt: #9446ff;
 $transparent: rgba($colourBackground, 0.5);
 $black: #000;
-$white: #fff;
+$white: #eee;
 
 // style
 $colourGrid: rgba($white, 0.025);
 $border: 1px solid $white;
+$borderAlt: 3px double $white;
 $boxShadow: 5px 5px 20px rgba($white, 0.25);
 
 // sizesa
 $space: 8px;
-$gridSize: $space * 2;
+$gridSize: $space;
 $navHeight: $space * 6;
 
 // index
 $indexBody: 1;
-$indexGrid: 2;
-$indexLogo: 3;
-$indexCanvas: 4;
-$indexPage: 5;
-$indexNav: 6;
+$indexLogo: 2;
+$indexGrid: 3;
+$indexLoading: 4;
+$indexCanvas: 5;
+$indexPage: 6;
+$indexNav: 7;
 
 // animation
 $transition: 0.5s;
