--- a/scss/modules/content/_page.scss
+++ b/scss/modules/content/_page.scss
@@ -24,6 +24,7 @@
       box-shadow: $boxShadow;
       border: $border;
       text-transform: uppercase;
+      user-select: none;
     }
 
     .section {
