--- a/scss/utils/_type.scss
+++ b/scss/utils/_type.scss
@@ -4,5 +4,6 @@ $fontSmall: 12px;
 $fontSize: 17px;
 $fontLarge: 24px;
 $fontHuge: 40px;
-$lineHeight: 1.25;
+$lineHeight: 1.2;
 $letterSpacing: initial;
+$wordSpacing: initial;
