--- a/scss/modules/content/_about.scss
+++ b/scss/modules/content/_about.scss
@@ -5,10 +5,10 @@
   }
 
   .about-text {
-    @include margin(0, 3);
-    @include pad(0, 1);
-    padding-left: $space * 2;
-    border-left: $border;
+    //@include margin(0, 3);
+    @include pad(0, 4);
+    //padding-left: $space * 2;
+    //border-left: $border;
     font-size: $fontLarge;
     width: 100%;
 
