--- a/scss/modules/_pane-gallery.scss
+++ b/scss/modules/_pane-gallery.scss
@@ -1,5 +1,6 @@
 .pane-gallery {
   z-index: $indexPaneContent;
+  user-select: none;
 
   .pane__inner {
 
@@ -14,7 +15,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    user-select: none;
 
     // #canvas-target
     .canvas-wrapper__inner {
@@ -31,6 +31,48 @@
     }
   }
 
+  .artwork-info {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-right: $space * 10;
+    margin-bottom: $space * 7;
+    padding: $space;
+    opacity: 0;
+    transform: translateX(-$gridSize * 2);
+    transition: opacity $transition, transform $transition;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    .title {
+      @include pad(0, 0.5);
+      font-size: $fontHuge;
+    }
+
+    .subtitle {
+      @include pad(0, 1);
+      max-width: 300px;
+      font-style: italic;
+    }
+
+    .desc {
+      @include pad(0, 0.5);
+      border-top: $border;
+      max-width: 300px;
+      text-align: right;
+    }
+
+    .link {
+      @include pad(0, 0.5);
+    }
+
+    &.active {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
   .gallery-controls {
     position: absolute;
 
@@ -43,6 +85,7 @@
       padding: $space;
       box-shadow: $boxShadow;
       border: $border;
+      user-select: none;
     }
   }
 }
