--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -27,6 +27,7 @@ $indexPaneContent: 4;
 //$indexLoading: 4;
 //$indexCanvas: 5;
 //$indexPage: 6;
+$indexLogo: 9;
 $indexNav: 9;
 $indexControls: 8;
 
