--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -48,7 +48,7 @@
 
         &.active {
           color: $colourAlt;
-          border-bottom: $space/2 solid white;
+          border-bottom: $space/2 solid $white;
         }
       }
     }
