logo models, updates

--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -1,9 +1,9 @@
 // colours
-$colourPrimary: #eee;
+$colourPrimary: #eee;//teal;//#eee;
 $colourSecondary: #444;
-$colourBackground: #4c474b;
+$colourBackground: #4c474b;//lighten(teal, 0%);//;
 $colourBackgroundAlt: #2c272b;
-$colourAlt: #9648ff;
+$colourAlt: #9648ff;// #000;//#9648ff;
 $transparent: rgba($colourBackground, 0.5);
 $black: #000;
 $white: #eee;
