--- a/scss/utils/_type.scss
+++ b/scss/utils/_type.scss
@@ -1,9 +1,9 @@
-$fontStack: 'Karla', sans-serif;
-$fontStackAlt: 'Playfair Display', serif;
+$fontStack: 'Roboto', sans-serif;
+//$fontStack: 'Karla', sans-serif;
 $fontSmall: 12px;
 $fontSize: 17px;
 $fontLarge: 22px;
 $fontHuge: 40px;
 $lineHeight: 1.25;
-$letterSpacing: initial;
+$letterSpacing: 1px;
 $wordSpacing: initial;
