--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -49,6 +49,7 @@
         &.active {
           color: $colourAlt;
           border-bottom: $space/2 solid $white;
+          box-shadow: $boxShadowAlt;
         }
       }
     }
