--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -18,6 +18,7 @@ $navHeight: $space * 6;
 $border: 1px solid $white;
 $borderAlt: 3px double $white;
 $boxShadow: 5px 5px 20px rgba($colourAlt, 0.4);
+$boxShadowAlt: 0px 15px 22px -8px rgba($colourAlt, 0.4);
 $backgroundGrid: linear-gradient(to right, $colourGrid 1px, transparent 1px), linear-gradient(to bottom, $colourGrid 1px, transparent 1px);
 
 // index
