--- a/scss/modules/_pane-gallery.scss
+++ b/scss/modules/_pane-gallery.scss
@@ -126,10 +126,14 @@
       width: 80px;
       height: 80px;
       cursor: pointer;
-      padding: $space;
       box-shadow: $boxShadow;
       border: $border;
       user-select: none;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
     }
   }
 }
