changes to structure/ assets

--- a/scss/modules/pages/_index.scss
+++ b/scss/modules/pages/_index.scss
@@ -1,4 +1,5 @@
 @import './page-exhibitions';
 @import './page-contact';
+@import './page-submissions';
 @import './page-about';
 @import './page-footer';
