--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -33,6 +33,7 @@ $indexNav: 9;
 $indexControls: 8;
 
 // animation
+$transitionFast: 0.35s;
 $transition: 0.5s;
 $transitionSlow: 1.25s;
 $transitionVerySlow: 2.5s;
