--- a/scss/modules/_pane-gallery.scss
+++ b/scss/modules/_pane-gallery.scss
@@ -130,6 +130,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    pointer-events: none;
 
     .title {
       @include pad(0, 0.5);
@@ -156,6 +157,7 @@
     &.active {
       opacity: 1;
       transform: translateX(0);
+      pointer-events: all;
     }
   }
 
