controls & floor changes

--- a/scss/modules/_index.scss
+++ b/scss/modules/_index.scss
@@ -1,6 +1,9 @@
 @import 'global';
 @import 'pane';
 @import 'pane-gallery';
+@import 'pane-gallery_controls';
+@import 'pane-gallery_gallery-menu';
+@import 'pane-gallery_artwork-info';
 @import 'pane-content';
 @import 'pages';
 @import 'nav';
