--- a/scss/utils/_type.scss
+++ b/scss/utils/_type.scss
@@ -1,4 +1,4 @@
-$fontStack: 'Roboto', sans-serif;
+$fontStack: 'Karla', sans-serif;
 //$fontStack: 'Karla', sans-serif;
 $fontSmall: 12px;
 $fontSize: 17px;
